# druid

./: CMakeLists.txt  README  README.md  arm-toolchain.cmake
cmake/: FindBard.cmake
resources/: style.qrc  style.qss
scripts/: init.sh  pre-commit-clang-format
src/: CMakeLists.txt
src/app/: CMakeLists.txt  boiling.cpp  boiling.h  boiling.ui  central_widget.cpp  central_widget.h  central_widget.ui  characteristic.cpp  characteristic.h  characteristic.ui  db_selector.cpp  db_selector.h  db_selector.ui  fermentation.cpp  fermentation.h  fermentation.ui  main.cpp  mashing.cpp  mashing.h  mashing.ui  menu.cpp  menu.h  notes.cpp  notes.h  notes.ui  temperature.cpp  temperature.h  temperature.ui  timer.cpp  timer.h  timer.ui  volume.cpp  volume.h  volume.ui  window.cpp  window.h
src/db/: CMakeLists.txt  db.cpp  db.h  malt.cpp  malt.h  recipe.cpp  recipe.h
src/dev/: CMakeLists.txt
src/dev/ds18b20/: CMakeLists.txt  ds18b20.cpp  ds18b20.h
src/gui/: CMakeLists.txt  central_widget.cpp  central_widget.h  central_widget.ui  main.cpp  notes.h  notes.ui  timer.cpp  timer.h  timer.ui  volume.cpp  volume.h  volume.ui  window.cpp  window.h
src/utils/: ebc_colors.h
tests/: CMakeLists.txt  ds18b20.cpp
